# wdisplays

./: README.md  index.html  meson_options.txt
.reuse/: dep5
debian/: changelog  control  copyright
protocol/: meson.build
resources/: head.ui  meson.build  network.cycles.wdisplays.gschema.xml  wdisplays.ui
src/: kanshi.h  main.c  meson.build  outputs.c  overlay.c  parser.c  render.c  wdisplays.h
